--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,22 +1,9 @@
 ---
-title: Starlight 🌟 Build documentation sites with Astro
-head:
-  - tag: title
-    content: Starlight 🌟 Build documentation sites with Astro
-description: Starlight helps you build beautiful, high-performance documentation websites with Astro.
+title: TutorialKit
+description: Get started with TutorialKit
 template: splash
-editUrl: false
-lastUpdated: false
-hero:
-  title: The <b>Best</b> Way to Start a <b>.NET 8</b> App.
-  tagline: Everything you need to build a stellar documentation website. Fast, accessible, and easy-to-use.
-  actions:
-    - text: Documentation
-      icon: right-arrow
-      variant: primary
-      link: /dotnet-starter-kit/general/getting-started/
-    - text: GitHub
-      icon: external
-      variant: secondary
-      link: https://github.com/withastro/starlight
 ---
+import HomePage from './index.astro';
+
+<HomePage />
+
