--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,7 +1,8 @@
 ---
-title: TutorialKit
-description: Get started with TutorialKit
+title: fullstackhero
+description: .NET 8 Starter Kit
 template: splash
+editUrl: false
 ---
 import HomePage from './index.astro';
 
