--- a/src/content/docs/dotnet-starter-kit/general/getting-started.mdx
+++ b/src/content/docs/dotnet-starter-kit/general/getting-started.mdx
@@ -80,11 +80,11 @@ Please follow the below instructions.
     ![FullStackHero .NET Starter Kit](../../../../assets/docs/general/solution-generation.png)
 </Steps>
 
-# 🚀 Goals
+## 🚀 Goals
 
 > With Aspire Dashboard, ASP.NET Core Web API & Blazor Client
 
-# ✨ Features & Technologies
+## ✨ Features & Technologies
 
 - ASP.NET Core 8
 - Entity Framework Core 8
@@ -110,9 +110,9 @@ Please follow the below instructions.
 
 ### 🐳 Docker Support
 
-# ☁️ Deploying to AWS
+## ☁️ Deploying to AWS
 
-# 🤝 Contributing
+## 🤝 Contributing
 
 ## 📝 Migrations
 
@@ -128,5 +128,5 @@ Please follow the below instructions.
     ```
 </Steps>
 
-# ✨ About 
+## ✨ About 
 This starter kit is developed and maintained by [Mukesh Murugan](https://www.linkedin.com/in/iammukeshm/) under [MIT license](https://github.com/fullstackhero/dotnet-starter-kit/blob/main/LICENSE).
